[project]
name = "politeness_check"
version = "0.0.3"
description = "This validator ensures that a generated output is polite."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8.1"
dependencies = [
    "guardrails-ai>=0.4.0",
    "litellm<1.82.6"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff"
]
validators = [
    "guardrails-grhub-response_evaluator<1.0.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "test"
]

[tool.pyright]
include = ["validator"]
